fix(cockpit): fix overflow of criteria value in search globally.
Related to CAM-8056

--- a/webapps/ui/common/styles/cam-webapps-common.less
+++ b/webapps/ui/common/styles/cam-webapps-common.less
@@ -158,6 +158,16 @@
 }
 
 
+/* ---------------------------------------------------------------- */
+
+
+[cam-widget-search] .main-field, [cam-widget-search] [cam-widget-search-pill] {
+  max-width: 100%
+}
+
+/* ---------------------------------------------------------------- */
+
+
 
 
 .camunda-ee-license-missing {
